--- a/timeline.css
+++ b/timeline.css
@@ -42,6 +42,12 @@ html body {
   box-shadow: var(--shadow3);
 }
 
+.slider img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
 .content {
   padding-right: 40px;
 }
@@ -79,6 +85,24 @@ html body {
 .container h4 {
   color: white;
   margin-bottom: 0;
+}
+
+.circle {
+  border-radius: 50%;
+  width: 35px;
+  height: 35px;
+  border: 5px solid #ffffff;
+  background-color: #888888;
+  display: block;
+  margin: 0 auto;
+}
+
+#first {
+
+}
+
+#star {
+  z-index: -1;
 }
 
 #yellow {
