Added Transitions and Fixed Terminology
Changelog:
Added bootstrap.css to css folder
Added max-width to stars.css
Changed #responsiveblock to .responsiveblock due to reusing id.
Changed padding of nav to 1%
Added two classes, .fadein-text and .fade-in
Added stylesheet references in the correct order for bootstrap, stars, style
Changed instances of id="responsiveBlock" to class=
Formated contact section and added animation
Added section for referencing javascript
Added javascript folder with bootstrap, jquery, and scrollmagic

--- a/css/stars.css
+++ b/css/stars.css
@@ -4,6 +4,7 @@
 	position: relative;
 	width: 100vw;
 	height: 100vh;
+	max-width: 100%;
 	background: linear-gradient(to bottom, #020107 0%, #201b46 100%);
 }
 
