--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ b{
 
 
 
-#qa{
+.qa{
     display: flex;
     vertical-align: bottom;
     flex-wrap: wrap;
@@ -152,7 +152,7 @@ b{
     box-shadow: var(--shadow2);
 }
 
-#qa #question{
+.qa .question{
     max-width: 39.5%;
     padding-right: .5%;
     min-width: 200px;
@@ -160,22 +160,22 @@ b{
     font-family: var(--headerFont);
 }
 
-#qa *{
+.qa *{
     min-width: 200px;
     width: 60%;
 }
 
 @media only screen and (max-width: 580px){
-    #qa *{
+    .qa *{
         width: 100%;
     }
-    #qa question{
+    .qa question{
         width: 100%;
     }
 }
 
 
-#qa #answer{
+.qa .answer{
     font-size: 1.5em;
     color: var(--black);
 }
