--- a/css/style.css
+++ b/css/style.css
@@ -243,7 +243,7 @@ b{
 
 .weird-flex{
     width: 500px;
-    height: auto;
+	height: 500px;
     filter: drop-shadow(0px 0px 10px rgba(0,0,0, 0.8));
 }
 
