--- a/css/style.css
+++ b/css/style.css
@@ -225,7 +225,7 @@ b{
     transform:scale(1.05);
 }
 
-#block-introduction, #block-mission-statement, #block-faq, #block-contacts, #block-robot-reveal{
+#block-introduction, #block-mission-statement, #block-faq, #block-contacts, #block-robot-reveal, #block-sponsors{
     box-shadow: var(--shadow3);
     padding: 12vh 5% 12vh 5%;
 }
@@ -286,3 +286,25 @@ b{
         transform: translateY(0);
     }
 }
+    
+    #block-sponsors{
+    background: var(--color3);
+    color: var(--black);
+    padding: 5%;
+    }
+    
+    .mega-sponsor{
+        margin: 10px;
+        height: 150px;
+        width: auto;
+        filter: drop-shadow(0px 0px 10px rgba(0,0,0, 0.4));
+        animation-iteration-count: infinite;
+        animation-timing-function: cubic-bezier(50);
+        animation: bounce 5s infinite;
+    }
+    
+    .sponsor{
+        margin: 10px;
+        height: 100px;
+        width: auto;
+    }
